# UserStudyManager

./: .gitignore  CMakeLists.txt  COPYING  README  UCLStudyClient.pro  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  part.cpp  part.h  participant.cpp  participant.h  progressbutton.cpp  progressbutton.h  progressreportservice.cpp  progressreportservice.h  requestservice.cpp  requestservice.h  step.cpp  step.h  study.cpp  study.h  tarball.cpp  uclnetqueries.cpp  uclnetqueries.h  ucluploadmanager.cpp  ucluploadmanager.h  uclwebmanager.cpp  uclwebmanager.h  uploadingtoolbarform.ui  uploadservice.cpp  uploadservice.h  webmanager.cpp  webmanager.h  webviewservice.cpp  webviewservice.h
Lib/: tarball.cpp  tarball.h
Model/: part.cpp  part.h  participant.cpp  participant.h  step.cpp  step.h  uploadjob.cpp  uploadjob.h
Services/: progressreportservice.cpp  progressreportservice.h  requestservice.cpp  requestservice.h  uploadservice.cpp  uploadservice.h  webviewservice.cpp  webviewservice.h
UI/: mainwindow.cpp  mainwindow.h
Widgets/: progressbarbutton.cpp  progressbarbutton.h  progressbutton.cpp  progressbutton.h
data/: LICENSE  multitasking.conf  ucl-study-manager.desktop
debian/: changelog  control  copyright
